--- a/.tools/build
+++ b/.tools/build
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+echo HEADER build
+
 pushd sealed_example || exit
 echo NOTE sealed_example
 dart run build_runner build --delete-conflicting-outputs
