--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -21,14 +21,37 @@ jobs:
         run: .tools/format
       - name: analyze
         run: .tools/analyze
-      - name: build
-        run: .tools/build
-      - name: test
-        run: .tools/test
-      - name: coverage
-        run: .tools/coverage
+      - name: test sealed_annotations
+        working-directory: sealed_annotations
+        run: dart test
+      - name: test sealed_writer
+        working-directory: sealed_writer
+        run: dart test
+      - name: test sealed_generators
+        working-directory: sealed_generators
+        run: dart test
+      - name: build sealed_example
+        working-directory: sealed_example
+        run: dart run build_runner build --delete-conflicting-outputs
+      - name: test sealed_example
+        working-directory: sealed_example
+        run: dart test
+      - name: test super_enum_sealed_annotations
+        working-directory: super_enum_sealed_annotations
+        run: dart test
+      - name: test super_enum_sealed_generators
+        working-directory: super_enum_sealed_generators
+        run: dart test
+      - name: build super_enum_sealed_example
+        working-directory: super_enum_sealed_example
+        run: dart run build_runner build --delete-conflicting-outputs
+      - name: test super_enum_sealed_example
+        working-directory: super_enum_sealed_example
+        run: dart test
       - name: example
         run: .tools/example
+      - name: coverage
+        run: .tools/coverage
       - name: upload coverage to codecov
         uses: codecov/codecov-action@v1
         with:
