fixed doc issues

--- a/sealed_example/pubspec.yaml
+++ b/sealed_example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sealed_example
-description: Dart and Flutter sealed class generator examples and tests.
+description: Dart and Flutter sealed class generator and annotations.
 version: 0.1.0
 homepage: https://github.com/6thsolution/dart_sealed
 publish_to: 'none'
