--- a/sealed_annotations/pubspec.yaml
+++ b/sealed_annotations/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sealed_annotations
-description: Dart and Flutter sealed class generator.
+description: Dart and Flutter sealed class generator and annotations.
 version: 0.1.0
 homepage: https://github.com/6thsolution/dart_sealed
 
