--- a/sealed_writer/pubspec.yaml
+++ b/sealed_writer/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sealed_writer
-description: Dart and Flutter sealed class writer.
+description: Dart and Flutter sealed class generator and annotations.
 version: 0.1.0
 homepage: https://github.com/6thsolution/dart_sealed
 
