--- a/super_enum_sealed_annotations/pubspec.yaml
+++ b/super_enum_sealed_annotations/pubspec.yaml
@@ -1,5 +1,5 @@
 name: super_enum_sealed_annotations
-description: Dart and Flutter sealed class generator.
+description: Dart and Flutter sealed class generator and annotations based on super_enum API.
 version: 0.1.0
 homepage: https://github.com/6thsolution/dart_sealed
 
