--- a/sealed_generators/analysis_options.yaml
+++ b/sealed_generators/analysis_options.yaml
@@ -1,1 +1,6 @@
 include: package:pedantic/analysis_options.yaml
+
+analyzer:
+  strong-mode:
+    implicit-dynamic: false
+    implicit-casts: false
