--- a/sealed_example/pubspec.yaml
+++ b/sealed_example/pubspec.yaml
@@ -1,8 +1,11 @@
 name: sealed_example
 description: Dart and Flutter sealed class generator and annotations.
-version: 1.0.0
+repository: https://github.com/6thsolution/dart_sealed/tree/master/sealed_example
 homepage: https://github.com/6thsolution/dart_sealed
 
+version: 1.0.0
+
+# example package should not be published
 publish_to: 'none'
 
 environment:
