--- a/sealed_generators/pubspec.yaml
+++ b/sealed_generators/pubspec.yaml
@@ -1,8 +1,11 @@
 name: sealed_generators
 description: Dart and Flutter sealed class generator and annotations.
-version: 1.0.0
+repository: https://github.com/6thsolution/dart_sealed/tree/master/sealed_generators
 homepage: https://github.com/6thsolution/dart_sealed
 
+version: 1.0.0
+
+# remove this when publishing
 publish_to: 'none'
 
 environment:
