--- a/sealed_writer/pubspec.yaml
+++ b/sealed_writer/pubspec.yaml
@@ -1,8 +1,11 @@
 name: sealed_writer
 description: Dart and Flutter sealed class generator and annotations.
-version: 1.0.0
+repository: https://github.com/6thsolution/dart_sealed/tree/master/sealed_writer
 homepage: https://github.com/6thsolution/dart_sealed
 
+version: 1.0.0
+
+# remove this when publishing
 publish_to: 'none'
 
 environment:
