--- a/super_enum_sealed_example/pubspec.yaml
+++ b/super_enum_sealed_example/pubspec.yaml
@@ -1,8 +1,11 @@
 name: super_enum_sealed_example
 description: Dart and Flutter sealed class generator and annotations based on super_enum API.
-version: 1.0.0
+repository: https://github.com/6thsolution/dart_sealed/tree/master/super_enum_sealed_example
 homepage: https://github.com/6thsolution/dart_sealed
 
+version: 1.0.0
+
+# example package should not be published
 publish_to: 'none'
 
 environment:
