--- a/super_enum_sealed_annotations/pubspec.yaml
+++ b/super_enum_sealed_annotations/pubspec.yaml
@@ -5,17 +5,13 @@ homepage: https://github.com/6thsolution/dart_sealed
 
 version: 1.0.0
 
-# remove this when publishing
-publish_to: 'none'
-
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   meta: ^1.3.0
   equatable: ^2.0.0
-  sealed_annotations:
-    path: ../sealed_annotations
+  sealed_annotations: '>=1.0.0 <1.1.0'
 
 dev_dependencies:
   pedantic: ^1.11.0
