--- a/super_enum_sealed_example/pubspec.yaml
+++ b/super_enum_sealed_example/pubspec.yaml
@@ -12,12 +12,10 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  super_enum_sealed_annotations:
-    path: ../super_enum_sealed_annotations
+  super_enum_sealed_annotations: '>=1.0.0 <1.1.0'
 
 dev_dependencies:
-  super_enum_sealed_generators:
-    path: ../super_enum_sealed_generators
+  super_enum_sealed_generators: '>=1.0.0 <1.1.0'
   pedantic: ^1.11.0
   test: ^1.17.0
   build_runner: ^2.0.0
