--- a/super_enum_sealed_generators/pubspec.yaml
+++ b/super_enum_sealed_generators/pubspec.yaml
@@ -5,17 +5,12 @@ homepage: https://github.com/6thsolution/dart_sealed
 
 version: 1.0.0
 
-# remove this when publishing
-publish_to: 'none'
-
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  super_enum_sealed_annotations:
-    path: ../super_enum_sealed_annotations
-  sealed_writer:
-    path: ../sealed_writer
+  super_enum_sealed_annotations: '>=1.0.0 <1.1.0'
+  sealed_writer: '>=1.0.0 <1.1.0'
   meta: ^1.3.0
   build: ^2.0.0
   source_gen: ^1.0.0
