--- a/sealed_annotations/pubspec.yaml
+++ b/sealed_annotations/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sealed_annotations
-description: Dart and Flutter sealed class generator and annotations.
+description: Dart and Flutter sealed class generator and annotations, with match methods and other utilities.
 repository: https://github.com/6thsolution/dart_sealed/tree/master/sealed_annotations
 homepage: https://github.com/6thsolution/dart_sealed
 
