--- a/sealed_generators/pubspec.yaml
+++ b/sealed_generators/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sealed_generators
-description: Dart and Flutter sealed class generator and annotations.
+description: Dart and Flutter sealed class generator and annotations, with match methods and other utilities.
 repository: https://github.com/6thsolution/dart_sealed/tree/master/sealed_generators
 homepage: https://github.com/6thsolution/dart_sealed
 
