--- a/sealed_writer/pubspec.yaml
+++ b/sealed_writer/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sealed_writer
-description: Dart and Flutter sealed class generator and annotations, with match methods and other utilities.
+description: Dart and Flutter sealed or union class generator and annotations, with match methods and other utilities.
 repository: https://github.com/6thsolution/dart_sealed/tree/master/sealed_writer
 homepage: https://github.com/6thsolution/dart_sealed
 
