--- a/super_enum_sealed_generators/pubspec.yaml
+++ b/super_enum_sealed_generators/pubspec.yaml
@@ -9,10 +9,8 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  super_enum_sealed_annotations:
-    path: ../super_enum_sealed_annotations
-  sealed_writer:
-    path: ../sealed_writer
+  super_enum_sealed_annotations: '>=1.2.0 <1.3.0'
+  sealed_writer: '>=1.2.0 <1.3.0'
   meta: ^1.7.0
   build: ^2.0.3
   source_gen: ^1.0.5
