--- a/sealed_generators/pubspec.yaml
+++ b/sealed_generators/pubspec.yaml
@@ -5,17 +5,12 @@ homepage: https://github.com/6thsolution/dart_sealed
 
 version: 1.5.0
 
-# remove this when publishing
-publish_to: 'none'
-
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  sealed_annotations:
-    path: ../sealed_annotations
-  sealed_writer:
-    path: ../sealed_writer
+  sealed_annotations: '>=1.5.0 <1.6.0'
+  sealed_writer: '>=1.5.0 <1.6.0'
   meta: ^1.7.0
   build: ^2.0.3
   source_gen: ^1.0.5
