--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -2,9 +2,7 @@ name: Dart
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ pub ]
 
 jobs:
   build:
