--- a/sealed_annotations/pubspec.yaml
+++ b/sealed_annotations/pubspec.yaml
@@ -3,7 +3,7 @@ description: Dart and Flutter sealed or union class generator and annotations, w
 repository: https://github.com/6thsolution/dart_sealed/tree/master/sealed_annotations
 homepage: https://github.com/6thsolution/dart_sealed
 
-version: 1.7.0
+version: 1.8.0
 
 # remove this when publishing
 publish_to: 'none'
@@ -12,9 +12,9 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  meta: ^1.3.0
+  meta: any
   equatable: ^2.0.0
 
 dev_dependencies:
-  pedantic: ^1.11.0
-  test: ^1.17.10
+  pedantic: any
+  test: any
