--- a/sealed_generators/pubspec.yaml
+++ b/sealed_generators/pubspec.yaml
@@ -3,7 +3,7 @@ description: Dart and Flutter sealed or union class generator and annotations, w
 repository: https://github.com/6thsolution/dart_sealed/tree/master/sealed_generators
 homepage: https://github.com/6thsolution/dart_sealed
 
-version: 1.7.0
+version: 1.8.0
 
 # remove this when publishing
 publish_to: 'none'
@@ -16,12 +16,12 @@ dependencies:
     path: ../sealed_annotations
   sealed_writer:
     path: ../sealed_writer
-  build: ^2.1.0
-  source_gen: ^1.0.5
-  analyzer: ^2.0.0
-  pub_semver: ^2.0.0
+  build: any
+  source_gen: any
+  analyzer: any
+  pub_semver: any
 
 dev_dependencies:
-  pedantic: ^1.11.0
-  test: ^1.17.10
-  build_test: ^2.1.3
+  pedantic: any
+  test: any
+  build_test: any
