--- a/sealed_writer/pubspec.yaml
+++ b/sealed_writer/pubspec.yaml
@@ -3,7 +3,7 @@ description: Dart and Flutter sealed or union class generator and annotations, w
 repository: https://github.com/6thsolution/dart_sealed/tree/master/sealed_writer
 homepage: https://github.com/6thsolution/dart_sealed
 
-version: 1.7.0
+version: 1.8.0
 
 # remove this when publishing
 publish_to: 'none'
@@ -12,5 +12,5 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dev_dependencies:
-  pedantic: ^1.11.0
-  test: ^1.17.10
+  pedantic: any
+  test: any
