--- a/sealed_generators/pubspec.yaml
+++ b/sealed_generators/pubspec.yaml
@@ -9,10 +9,8 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  sealed_annotations:
-    path: ../sealed_annotations
-  sealed_writer:
-    path: ../sealed_writer
+  sealed_annotations: '>=1.8.0 <1.9.0'
+  sealed_writer: '>=1.8.0 <1.9.0'
   build: any
   source_gen: any
   analyzer: any
