--- a/sealed_example/pubspec.yaml
+++ b/sealed_example/pubspec.yaml
@@ -18,6 +18,6 @@ dependencies:
 dev_dependencies:
   sealed_generators:
     path: ../sealed_generators
-  pedantic: ^1.11.0
-  test: ^1.17.10
-  build_runner: ^2.1.1
+  pedantic: any
+  test: any
+  build_runner: any
