--- a/.tools/build
+++ b/.tools/build
@@ -2,8 +2,8 @@
 
 echo HEADER build
 
-pushd sealed_example || exit 1
-echo NOTE sealed_example
+pushd example || exit 1
+echo NOTE example
 dart run build_runner build --delete-conflicting-outputs || exit 1
 popd || exit 1
 
