--- a/sealed_annotations/pubspec.yaml
+++ b/sealed_annotations/pubspec.yaml
@@ -5,9 +5,6 @@ homepage: https://github.com/6thsolution/dart_sealed
 
 version: 1.11.0
 
-# remove this when publishing
-publish_to: 'none'
-
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
@@ -18,3 +15,6 @@ dependencies:
 dev_dependencies:
   pedantic: any
   test: any
+
+# remove this on pub branch
+publish_to: 'none'
