--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -1,6 +1,8 @@
 include: package:lints/recommended.yaml
 
 analyzer:
-  strong-mode:
-    implicit-dynamic: false
-    implicit-casts: false
+  language:
+    strict-casts: true
+    strict-inference: true
+    strict-raw-types: true
+
