ci(all): fix a little issue

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: stable
-      - name: init
+      - name: pub get
         run: .tools/init
       - name: format
         run: .tools/format
